# streamlit_sidebar_accordion_menu

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
sidebar_accordion_menu/: __init__.py  example.py  menu_utils.py
sidebar_accordion_menu/frontend/: package-lock.json  package.json
sidebar_accordion_menu/frontend/src/: SidebarAccordionMenu.tsx  index.tsx
sidebar_accordion_menu/pages/: advanced_settings.py  general_settings.py  sales_dashboard.py  user_analytics.py
