[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-sidebar-accordion-menu"
version = "0.0.1"
description = "A Streamlit component for creating sidebar accordion menus with navigation support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ayumu Yamaguchi", email = "your.email@example.com"},
]
keywords = ["streamlit", "component", "sidebar", "menu", "navigation", "accordion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "streamlit >= 1.31.0",
]

[project.optional-dependencies]
dev = [
    "wheel",
    "pytest==7.4.0",
    "playwright==1.48.0",
    "requests==2.31.0",
    "pytest-playwright-snapshot==1.0",
    "pytest-rerunfailures==12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/streamlit-sidebar-accordion-menu"
Documentation = "https://github.com/yourusername/streamlit-sidebar-accordion-menu#readme"
Repository = "https://github.com/yourusername/streamlit-sidebar-accordion-menu"
Issues = "https://github.com/yourusername/streamlit-sidebar-accordion-menu/issues"